--- a/.dist/task-2.html
+++ b/.dist/task-2.html
@@ -6,6 +6,12 @@
     <title>Contact Form</title>
 </head>
 <body>
+    <style>
+        .body{
+            border: 2px solid black;
+            border-radius: 3px;
+        }
+    </style>
     <center>
         <label>Contact Form</label>
         <br><br>
@@ -16,7 +22,7 @@
 <input type="email" placeholder="Enter email">
 <br><br>
 <label>Message:</label>
-<input type="Message" placeholder="Description" style="width: 200px; height: 50px;">
+<textarea placeholder="Description"></textarea>
     </center>
     
 </body>
